# ProofBench

./: .gitignore  ARCHITECTURE.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_ROLES.md  TODO.md  next.config.ts  package-lock.json  package.json
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/about-us/: page.tsx
app/admin/users/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard - Copy/: page.tsx
app/dashboard - Copy/profile/: page.tsx
app/dashboard/admin/: layout.tsx
app/dashboard/courses/: page.tsx
app/dashboard/exams/: page.tsx
app/dashboard/profile/: page.tsx
app/dashboard/test/: page.tsx
app/dashboard/users/: page.tsx
app/login/: page.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
app/theme-demo/: page.tsx
components/admin/: user-management.tsx
components/admin/courses/: course-editor.tsx  index.ts  section-manager.tsx  video-form-dialog.tsx  video-manager.tsx
components/courses/: comment-form.tsx  comment-item.tsx  comment-section.tsx  course-card.tsx  course-playlist.tsx  index.ts  video-player.tsx  video-resources.tsx
components/dashboard/: DashboardHeader.tsx  DashboardLayout.tsx  DashboardSidebar.tsx  index.ts
components/shared/: Logo.tsx  PageLoader.tsx  protected-route.tsx  role-based-components.tsx  theme-toggle.tsx
components/ui/: protected-route.tsx  theme-toggle.tsx
constants/: dashboard.ts  navlinks.ts  roles.ts
contexts/: admin-mode.tsx  auth.tsx
lib/supabase/: README_ROLES.md  profiles.ts  types.ts
lib/supabase/courses/: api.ts  comments-api.ts  courses-api.ts  index.ts  progress-api.ts  resources-api.ts  sections-api.ts  types.ts  videos-api.ts
lib/utils/: video-utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+15 files in other folders)
