[package]
name = "proofbench"
version = "0.1.0"
description = "ProofBench – Next.js + Tauri Desktop App"
authors = ["Oshana Vishka <oshanavishkapiries@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/oshanavishkapiries/ProofBench"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "proofbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", default-features = false, features = ["protocol-asset", "updater", "tray-icon", "shell-open", "webkit2gtk-6-0"] }
tauri-plugin-log = "2.0.4"